# qwirkle

./: CMakeLists.txt  README.md  Règles.md  affichage.c  affichage.h  jeu.c  jeu.h  joueur.c  joueur.h  main.c  plateau.c  plateau.h  qwirkle  regles.c  regles.h  structures.h  walkthrough.md
v1_init/: affichage.c  main.c  qwirkle_v1  structures.h
v2_joueurs/: affichage.c  joueur.c  main.c  plateau.c  qwirkle_v2  structures.h
v3_gameplay/: affichage.c  joueur.c  main.c  plateau.c  qwirkle_v3  structures.h
v4_final/: affichage.c  jeu.c  qwirkle_v4  regles.c
